Fix drop down menu jumping issue

--- a/src/components/CommandBar/CommandBar.scss
+++ b/src/components/CommandBar/CommandBar.scss
@@ -52,7 +52,7 @@ $SearchBox-iconWrapperWidth: $SearchBox-widthLgCollapsed - ($SearchBox-sidePaddi
   background-color: $ms-color-themeLighterAlt;
   height: $CommandBar-height;
   white-space: nowrap;
-  
+
   @include user-select(none);
 }
 
@@ -314,8 +314,4 @@ $SearchBox-iconWrapperWidth: $SearchBox-widthLgCollapsed - ($SearchBox-sidePaddi
 }
 .ms-CommandBarSearch-input::-webkit-input-placeholder {
   font-style: italic;
-}
-
-.ms-CommandBar-menuHost {
-  margin-top: 10px;
 }
